k8s/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: alertmanager-deployment
  labels:
    app: alertmanager
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - env:
        - name: WEBHOOK_URL
          value: bot.default.svc.cluster.local:3000
        image: labbsr0x/big-brother-alertmanager:latest
        imagePullPolicy: IfNotPresent
        name: alertmanager
        ports: 
        - containerPort: 9093
        resources: {}
        volumeMounts:
        - mountPath: /alertmanager
          name: alertmanager
      restartPolicy: Always
      volumes:
      - name: alertmanager
        persistentVolumeClaim:
          claimName: alertmanager
