k8s/bot-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: bot
  name: bot
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: bot
    spec:
      containers:
      - env:
        - name: DEBUG
          value: '*'
        - name: ETCD_URLS
          value: http://etcd:2379
        - name: TELEGRAM_TOKEN
          value: <your telegram token>
        image: labbsr0x/big-brother-bot:latest
        name: bot
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: bot
      restartPolicy: Always
      volumes:
      - name: bot
        persistentVolumeClaim:
          claimName: bot
status: {}
