k8s/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: etcd-deployment
  labels:
    app: etcd
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - env:
        - name: ETCD_LISTEN_CLIENT_URLS
          value: http://0.0.0.0:2379
        - name: ETCD_ADVERTISE_CLIENT_URLS
          value: http://etcd:2379
        image: quay.io/coreos/etcd:v3.2.25
        imagePullPolicy: IfNotPresent
        name: etcd
        ports: 
        - containerPort: 2379
        resources: {}
      restartPolicy: Always
