k8s/example-bb-promster-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: example-bb-promster
  name: example-bb-promster
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: example-bb-promster
    spec:
      containers:
      - env:
        - name: BB_PROMSTER_LEVEL
          value: "1"
        - name: ETCD_URLS
          value: http://example-etcd:2379
        - name: REGISTRY_ETCD_BASE
          value: /metrics-generator
        - name: REGISTRY_SERVICE
          value: example-service
        - name: SCRAPE_ETCD_PATH
          value: /metrics-generator/example-service
        image: labbsr0x/bb-promster:latest
        name: example-bb-promster
        ports:
        - containerPort: 9090
        resources: {}
      restartPolicy: Always
status: {}
