k8s/example-etcd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: example-etcd
  name: example-etcd
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: example-etcd
    spec:
      containers:
      - env:
        - name: ETCD_ADVERTISE_CLIENT_URLS
          value: http://example-etcd:2379
        - name: ETCD_LISTEN_CLIENT_URLS
          value: http://0.0.0.0:2379
        image: quay.io/coreos/etcd:v3.2.25
        name: example-etcd
        ports:
        - containerPort: 2379
        resources: {}
      restartPolicy: Always
status: {}
