k8s/example-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: example-grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: example-grafana
  template:
    metadata:
      labels:
        app: example-grafana
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: bigbrother
        - name: GF_SECURITY_ADMIN_USER
          value: bigbrother
        - name: PROMETHEUS_ACCESS_TYPE
          value: direct
        - name: PROMETHEUS_URL
          value: http://localhost:9091
        image: labbsr0x/bb-grafana:latest
        imagePullPolicy: IfNotPresent
        name: example-grafana
        ports: 
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
