k8s/monitor-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: monitor
    spec:
      containers:
      - env:
        - name: ALERT_MANAGER_URLS
          value: alertmanager:9093
        - name: BB_PROMSTER_LEVEL
          value: "1"
        - name: ETCD_URLS
          value: http://etcd:2379
        image: labbsr0x/big-brother-monitor:latest
        name: monitor
        ports:
        - containerPort: 9090
        resources: {}
      restartPolicy: Always
status: {}
