k8s/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot
spec:
  type: NodePort
  selector:
    app: bot
  ports:
    - port: 3001
      targetPort: 3000
      nodePort: 31335
