k8s/example-bb-promster-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: example-bb-promster-grafana
  name: example-bb-promster-grafana
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9090
  selector:
    io.kompose.service: example-bb-promster-grafana
status:
  loadBalancer: {}
