k8s/example-etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: example-etcd
  name: example-etcd
spec:
  ports:
  - name: "2379"
    port: 2379
    targetPort: 2379
  selector:
    io.kompose.service: example-etcd
status:
  loadBalancer: {}
