k8s/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: grafana.info
    http:
      paths:
      - path: /
        backend:
          serviceName: example-grafana
          servicePort: 3000
  - host: alertmanager.info
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: bb-promster.info
    http:
      paths:
      - path: /
        backend:
          serviceName: bb-promster
          servicePort: 9090
  - host: bb-promster-l2.info
    http:
      paths:
      - path: /
        backend:
          serviceName: bb-promster-l2
          servicePort: 9091
  - host: example-service.info
    http:
      paths:
      - path: /
        backend:
          serviceName: example-service
          servicePort: 32865
